@startuml er

entity "Task" as Task {
  * id : int
  * value : string
  * description : string
  * status : TaskStatus
  * created_at : DateTime
  * updated_at : DateTime
}

entity account {
  * id : int
  * email : string
  * password : string
  * created_at : DateTime
  * updated_at : DateTime
}

entity user {
    * id : int
    * name : string
    * country : string
    * created_at : DateTime
    * updated_at : DateTime
}

user ||--|{ account : has

user ||--o{ Tasks : creates